manifests/services/api-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: dev
spec:
  selector:
    app: projectcrawler-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
  type: NodePort
