manifests/services/crawler-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-nodeport
  namespace: dev
spec:
  selector:
    app: projectcrawler-crawler
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30082
  type: NodePort
