manifests/services/elasticsearch-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: dev
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
  type: NodePort
