manifests/services/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: dev
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
  type: ClusterIP
