manifests/services/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dev
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
