manifests/services/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: dev
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
