manifests/services/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: dev.projectcrawler.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-nodeport
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-nodeport
            port:
              number: 80
      - path: /crawler
        pathType: Prefix
        backend:
          service:
            name: crawler-nodeport
            port:
              number: 80
      - path: /es
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
